# cs336

./: .gitignore  README.md  pyproject.toml
cs336/models/: __init__.py  transformer.py
cs336/tokenizer/: __init__.py  bpe.py
notes/: explore_tokenizer.ipynb
tests/: test_bpe.py  test_smoke.py  test_transformer.py
